--- a/mysite02/src/main/webapp/assets/css/guestbook.css
+++ b/mysite02/src/main/webapp/assets/css/guestbook.css
@@ -1,20 +1,20 @@
-@CHARSET "UTF-8";
+@charset "UTF-8";
 @import "mysite.css";
 
 #guestbook			{ margin:20px auto;	width:540px; }
 
 #guestbook form, 
-#guestbook table	{ width:100% }
+#guestbook table	{ width:100%; }
 
 #guestbook table,	
-#guestbook table td { border:1px solid #333 }
-#guestbook table td { padding:5px }
+#guestbook table td { border:1px solid #333; }
+#guestbook table td { padding:5px; }
 
-#guestbook ul		{ width:100%; margin-top:20px }
-#guestbook ul li	{ width:100%; margin-top:10px }
+#guestbook ul		{ width:100%; margin-top:20px; }
+#guestbook ul li	{ width:100%; margin-top:10px; }
 
 
-#guestbook.delete-form	{ height:200px }
+#guestbook.delete-form	{ height:200px; }
 #guestbook.delete-form form {
 	width:300px;
 	padding:10px;
@@ -22,8 +22,8 @@
 	border-radius: 10px;
 	margin:50px auto;
 }
-#guestbook.delete-form a	{ display:block; margin:20px auto; width:110px }
+#guestbook.delete-form a	{ display:block; margin:20px auto; width:110px; }
 
-#guestbook.delete-message p	{ padding:100px; height:50px; text-align:center }
+#guestbook.delete-message p	{ padding:100px; height:50px; text-align:center; }
 
 #guestbook textarea#content	{ width: 100%; border:none; height: 100px; resize: none; outline: none; }
